*SVN*

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Added script/process/inspector to do simple process status information on Rails dispatchers keeping pid files in tmp/pids [DHH]

* Added pid file usage to script/process/spawner and script/process/reaper along with a directive in default config/lighttpd.conf file to record the pid. They will all save their pid file in tmp/pids [DHH]


*1.1.2* (April 9th, 2005)

* Mention in docs that config.frameworks doesn't work when getting Rails via Gems. Closes #4857. [Alisdair McDiarmid]

* Change the scaffolding layout to use yield rather than @content_for_layout. [Marcel Molina Jr.]

* Added rake rails:update:configs to update config/boot.rb from the latest (also included in rake rails:update) [DHH]

* Fixed that boot.rb would set RAILS_GEM_VERSION twice, not respect an uncommented RAILS_GEM_VERSION line, and not use require_gem [DHH]


*1.1.1* (April 6th, 2006)

* Enhances plugin#discover allowing it to discover svn:// like URIs (closes #4565) [ruben.nine@gmail.com]

* Update to Prototype 1.5.0_rc0 [Sam Stephenson]

* Fixed that the -r/--ruby path option of the rails command was not being respected #4549 [ryan.raaum@gmail.com]

* Added that Dispatcher exceptions should not be shown to the user unless a default log has not been configured. Instead show public/500.html [DHH]

* Fixed that rake clone_structure_to_test should quit on pgsql if the dump is unsuccesful #4585 [augustz@augustz.com]

* Fixed that rails --version should have the return code of 0 (success) #4560 [blair@orcaware.com]

* Install alias so Rails::InfoController is accessible at /rails_info. Closes #4546. [Nicholas Seckar]

* Fixed that spawner should daemonize if running in repeat mode [DHH]

* Added TAG option for rake rails:freeze:edge, so you can say rake rails:freeze:edge TAG=rel_1-1-0 to lock to the 1.1.0 release [DHH]
